@@ -13,7 +13,6 @@ WORKDIR /app
 EXPOSE 8080
 
 COPY target/spring-rest.jar spring-rest.jar
-CMD ["-jar", "spring-rest.jar"]
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Xmx256m", "-Djava.security.egd=file:/dev/urandom"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","spring-rest.jar"]
 
